Fix 1567(2/2): [HelpPage]Api uri not displaying parameter which is a collection of primitive types and coming from Uri.     This is a separated PR fixing 1567:         - Add support for generating query string of type Dictionary and KeyValuePair.         - Replace '.' with '-' in GetFriendlyId. Otherwise, RelativePath with . (like ModelType.Foo or ModelType[0].Foo)           will break the help page's uri         - Change the css of help page to make a long path more readable.

--- a/src/WebApiHelpPage/Areas/HelpPage/HelpPage.css
+++ b/src/WebApiHelpPage/Areas/HelpPage/HelpPage.css
@@ -109,6 +109,7 @@
 .help-page h1,
 .help-page .h1 {
     font-size: 36px;
+    line-height: normal;
 }
 
 .help-page h2,
